API스펙 수정